--- a/css/main.css
+++ b/css/main.css
@@ -7,21 +7,13 @@
   padding: 0;
 }
 
-body {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
 .wrapper {
   width: 80vw;
   font-size: 1.5rem;
+  margin: 0 auto;
 }
 
-.form {
+.generator {
   margin: 20px;
 }
 
@@ -44,7 +36,7 @@ body {
           align-items: center;
 }
 
-.person .name {
+.person__name {
   text-transform: uppercase;
   font-size: 1.5rem;
   margin-left: 20px;
